--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cross-env": "^7.0.3",
     "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
   }
 }
